=== HEAD

* Support exclusion constraints on PostgreSQL (jeremyevans)

* Allow for overriding the create/alter table generators used per Database object (jeremyevans)

* Make casting to Date/(Time/DateTime) use date/datetime functions on SQLite (jeremyevans)

* Add pg_range_ops extension for DSL support for PostgreSQL range operators and functions (jeremyevans)

* The json library is now required when running the plugin/extension specs (jeremyevans)

* Use change migrations instead of up/down migrations in the schema_dumper (jeremyevans)

* Dump unsigned integer columns with a check >= 0 constraint in the schema_dumper (stu314)

* Switch the :key_hash entry to the association :eager_loader option to use the method symbol(s) instead of the column symbol(s) (jeremyevans)

* Add :id_map entry to the hash passed to the association :eager_loader option, for easier custom eager loading (jeremyevans)

* Add :predicate_key association option, for easier creation of associations depending on expressions beyond simple column references (jeremyevans)

* Fix dumping of non-integer foreign key columns in the schema_dumper (jeremyevans) (#502)

* Add nested_attributes :fields option to be a proc that is called with the associated object (chanks) (#498)

* Add split_array_nil extension, for compiling :col=>[1, nil] to col IN (1) OR col IS NULL (jeremyevans)

* Add Database#extension and Dataset#extension for loading extension modules into objects automatically (jeremyevans)

* Respect an existing dataset limit when updating on Microsoft SQL Server (jeremyevans)

* Add pg_range extension, for dealing with PostgreSQL 9.2+ range types (jeremyevans)

* Make pg_array extension convert array members when typecasting Array to PGArray (jeremyevans)

* Make jdbc/postgres adapter convert array type elements (e.g. date[] arrays are returned as arrays of Date instances) (jeremyevans)
