@@ -1,5 +1,9 @@
 === HEAD
 
+* Support alter_table validate_constraint on PostgreSQL for validating constraints previously declared with NOT VALID (jeremyevans)
+
+* Support :not_valid option when adding foreign key constraints on PostgreSQL (jeremyevans)
+
 * Support exclusion constraints on PostgreSQL (jeremyevans)
 
 * Allow for overriding the create/alter table generators used per Database object (jeremyevans)
